2008-06-23  Neal H. Walfield  <neal@gnu.org>

	* s-printf.h (s_printf): Use gcc's format attribute.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): [! NDEBUG]: Only free folios
	address space after we are really done using it.

2008-06-22  Neal H. Walfield  <neal@gnu.org>

	* errno.h (_ERRNO_H) [! _ENABLE_TESTS && ! RM_INTERN]: Undef.
	[! _ENABLE_TESTS && ! RM_INTERN]: Include next <errno.h>.

2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>

	* strings.h: New file, from today's glibc CVS HEAD.

2008-06-11  Neal H. Walfield  <neal@gnu.org>

	* s-printf.h: New file.
	* Makefile.am (common_sources): Add s-printf.h.
	* s_printf.c: Include "s-printf.h".

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): When allocating a folio, only
	update the shadow capability's type after the folio has actually
	been allocated.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (as_insert_custom): Replace use of as_insert
	with as_insert_full.
	(allocate_object): Change return type to struct
	as_allocate_pt_ret.  Replace use of as_slot_ensure with
	as_ensure_use.
	(allocate_page_table): New function.
	(process_spawn): Update use of as_insert_custom to be consistent
	with new API, in particular, pass allocate_page_table instead of
	allocate_object.  Replace use of object_lookup_rel with
	as_object_lookup_rel.

2008-05-31  Neal H. Walfield  <neal@gnu.org>

	* ucontext.h: New file.

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* s_printf.c (s_cputs): New function.
	(s_puts): Reimplement in terms of this.
	(print_nr): Take additional parameter, the putchar routine to use.
	(print_signed_nr): Likewise.
	(s_cvprintf): New function.
	(s_vprintf): Reimplement in terms of this.
	(s_cprintf): New function.
	(s_printf): Call s_cvprintf, not s_vprintf.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: New file.
	* Makefile.am [ENABLE_TESTS]: Don't build package's libraries.
